# udemy_c_programming_for_beginners

./: .gitignore  CMakeLists.txt  README.md
src/section3/: assignment.c
src/section4/: scanf_usage.c
src/section5/: basic_enums.c  basic_types.c  basic_variables_usage.c  challenge_1.c  challenge_2.c  command_line_arguments.c  print_types.c
