cmake_minimum_required(VERSION 3.16)
project(udemy_c_programming_for_beginners C)

set(CMAKE_C_STANDARD 11)

add_executable(main src/section3/main.c)
add_executable(assignment_section3 src/section3/assignment.c)
add_executable(scanf_usage src/section4/scanf_usage.c)
add_executable(variables_basics src/section5/basic_variables_usage.c)
add_executable(basic_types src/section5/basic_types.c)
add_executable(basic_enum src/section5/basic_enums.c)
add_executable(print_types src/section5/print_types.c)
add_executable(command_line_arguments src/section5/command_line_arguments.c)
add_executable(challenge_1 src/section5/challenge_1.c)
add_executable(challenge_2 src/section5/challenge_2.c)